UPDATE:add uuid to the roles and permission
